applications/echo-server/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
