applications/echo-server/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-cluster-issuer
  labels:
    app.kubernetes.io/instance: echo-server
  name: echo-server
spec:
  ingressClassName: nginx
  rules:
  - host: echo-server.tav.dev
    http:
      paths:
      - backend:
          service:
            name: echo-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - echo-server.tav.dev
    secretName: echo-server-general-tls
